--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -81,7 +81,7 @@
 \vspace*{-10pt}
 \begin{center}
 	{\Huge \scshape {Felix I. Okoronkwo}}\\
-	felix.okoronkwo.1@gmail.com $\cdot$ 081-6484-6417 $\cdot$ https://github.com/felixhatesbugs\\
+	felix.okoronkwo.1@gmail.com $\cdot$ 081-6484-6417 $\cdot$ \url{https://www.linkedin.com/in/felix-okoronkwo} \\
 \end{center}
 
 %==== Education ====%
@@ -137,15 +137,15 @@ Certificate of Completion Backend-Development and Software Engineering \hfill Au
 \header{Projects}
 {\textbf{Airbnb clone}} {\sl Python, LAMP stack, SQLAlchemy, Haproxy and Nginx} \\
 Created a full-stack Airbnb-like web service, handling database design, frontend and backend API development\\
-\href{https://github.com/felixhatesbugs/AirBnB_clone_v4}{link to project} \\
+\url{https://github.com/felixhatesbugs/AirBnB_clone_v4} \\
 \vspace*{2mm}
 {\textbf{Monty!}} {\sl C programming language} \\
 Simple Monty bytecode interpreter built in C\\
-\href{https://github.com/felixhatesbugs/monty}{link to project} \\
+\url{https://github.com/felixhatesbugs/monty} \\
 \vspace*{2mm}
 {\textbf{Maze 3D Raycater (In-Progress)}} {\sl C, SDL2} \\
 3d maze raycatser inspired by popular 3d FPS retro game wolfheinstein 3D\\
-\href{https://github.com/felixhatesbugs/maze-raycasting-3D}{link to project} \\
+\url{https://github.com/felixhatesbugs/maze-raycasting-3D} \\
 \vspace*{2mm}
 
 \header{Awards}
