--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -125,7 +125,7 @@ Certificate of Completion Backend-Development and Software Engineering \hfill Au
 
 \header{Skills}
 \begin{tabular}{ l l }
-	Programming Languages:             & (Proficient) C and Python, (Familiar) Javascript, Kotlin \\
+	Programming Languages:             & (Proficient) C/C++ and Python, (Familiar) Javascript, Kotlin \\
 	Database:                          & SQL, DBMS (MySQL), ORMs (SQLAlchemy)                     \\
 	Linux:                             & Bash scripting and automation, Nginx                     \\
 	Conternization and Virtualization: & Docker                                                   \\
